linux (4.9.110-3+deb9u4) UNRELEASED; urgency=medium

  * init: rename and re-order boot_cpu_state_init()
    Adresses boot failures on arm* systems. (Closes: #906769)
  * Sync "cpu/hotplug: Boot HT siblings at least once" from 4.9.120
  * Sync "cpu/hotplug: Non-SMP machines do not make use of booted_once" from
    4.9.120

 -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 21 Aug 2018 07:47:24 +0200

linux (4.9.110-3+deb9u3) stretch-security; urgency=high

  [ Salvatore Bonaccorso ]
  * Add L1 Terminal Fault fixes (CVE-2018-3620, CVE-2018-3646)
    - [x86] speculation/l1tf: Increase 32bit PAE __PHYSICAL_PAGE_SHIFT
    - [x86] mm: move _PAGE_SWP_SOFT_DIRTY from bit 7 to bit 1
    - [x86] speculation/l1tf: Change order of offset/type in swap entry
    - [x86] speculation/l1tf: Protect swap entries against L1TF
    - [x86] speculation/l1tf: Protect PROT_NONE PTEs against speculation
    - [x86] speculation/l1tf: Make sure the first page is always reserved
    - [x86] speculation/l1tf: Add sysfs reporting for l1tf
    - [x86] speculation/l1tf: Disallow non privileged high MMIO PROT_NONE
      mappings
    - [x86] speculation/l1tf: Limit swap file size to MAX_PA/2
    - [x86] bugs: Move the l1tf function and define pr_fmt properly
    - [x86] smp: Provide topology_is_primary_thread()
    - [x86] topology: Provide topology_smt_supported()
    - cpu/hotplug: Make bringup/teardown of smp threads symmetric
    - cpu/hotplug: Split do_cpu_down()
    - cpu/hotplug: Provide knobs to control SMT
    - [x86] cpu: Remove the pointless CPU printout
    - [x86] cpu/AMD: Remove the pointless detect_ht() call
    - [x86] cpu/common: Provide detect_ht_early()
    - [x86] cpu/topology: Provide detect_extended_topology_early()
    - [x86] cpu/intel: Evaluate smp_num_siblings early
    - [x86] CPU/AMD: Do not check CPUID max ext level before parsing SMP
      info
    - [x86] cpu/AMD: Evaluate smp_num_siblings early
    - [x86] apic: Ignore secondary threads if nosmt=force