@@ -5,6 +5,9 @@ linux (4.9.110-3+deb9u4) UNRELEASED; urgency=medium
   * Sync "cpu/hotplug: Boot HT siblings at least once" from 4.9.120
   * Sync "cpu/hotplug: Non-SMP machines do not make use of booted_once" from
     4.9.120
+  * Refresh features/all/rt/0157-softirq-Split-softirq-locks.patch patch.
+    Adjust context after applying "init: rename and re-order
+    boot_cpu_state_init()".
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 21 Aug 2018 07:47:24 +0200
 
